image size and error pages

--- a/public/404.html
+++ b/public/404.html
@@ -1,2 +1,6 @@
-
-<img src="/images/error.png" alt="error image"/>
+<html>
+<style>
+  img { margin-top: 500px; }
+</style>
+  <img src="/images/error.png" alt="error image"/>
+</html>
