--- a/public/500.html
+++ b/public/500.html
@@ -1,1 +1,7 @@
-<img src="/images/error.png" alt="error image">
+<html>
+<style>
+  img { margin-top: 500px; }
+</style>
+  <img src="/images/error.png" alt="error image"/>
+</html>
+
